# cqljupyter

./: Example.ipynb  README.md  knowledge_share.md  setup.cfg
cqljupyter/: kernel.py
cqljupyter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
