[metadata]
name = cqljupyter
version = 2.0.0
author = Brad Schoening
license = Apache
description = CQL kernel for Jupyter based on Cassandra CQLSH
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cql, cassandra
url = https://github.com/bschoening/cqljupyter
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
[options]
packages = cqljupyter
install_requires = cqlsh; ipython; jupyter-client; notebook; pandas; matplotlib; cassandra-driver>=3.28; 
tests_require = jupyter_kernel_test
